--- a/styles/mainbody.module.css
+++ b/styles/mainbody.module.css
@@ -1,3 +1,8 @@
 .mainbody{
-    scroll-snap-type: mandatory;
+    /* scroll-snap-type: mandatory; */
+    scroll-behavior: smooth;
+}
+
+.mainbody::-webkit-scrollbar{
+    display: none
 }
