--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
-    background-color: #f1f5f8;
+    background-color: #60b4f5;
     transition: all ease 500ms;
     display: flex;
     justify-content: center;
@@ -45,13 +45,13 @@
 .ChevronUpIcon{
     width: 40px;
     height: auto;
-    color: #1c1e21;
+    color: white;
     transition: all ease 500ms;
     margin-right: 20px;
 }
 
 .menuDiv > h1{
-    color: #1c1e21;
+    color: white;
     font-size: 30px;
     font-weight: 300;
 }
