--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -14,7 +14,14 @@
 .line{
     width: 100%;
     height: 3px;
-    background-color: #576b95;
+    background-color: white;
+    transition: all ease 500ms;
+}
+
+.middleLine{
+    width: 70%;
+    height: 3px;
+    background-color: white;
     transition: all ease 500ms;
 }
 
