--- a/styles/intro.module.css
+++ b/styles/intro.module.css
@@ -1,5 +1,5 @@
 .banner{
-    background: url('/images/landing.jpg') no-repeat center center fixed;
+    background: url('/images/bg.jpg') no-repeat center center fixed;
     background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
