--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
-    background-color: #60b4f5;
+    background-color: #0b4572;
     transition: all ease 500ms;
     display: flex;
     justify-content: center;
