--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,7 @@
   min-height: 100vh;
   height: auto;
   width: 100vw;
+  /* max-width: 90rem; */
   /* flex: 1; */
   /* display: flex; */
   flex-direction: column;
