--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,5 +17,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* transition: all ease 500ms; */
+  transition: all ease 500ms;
+  font-family: "montserrat"
 }
