--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
-    background-color: #0b4572;
+    background-color: #FFBF00;
     transition: all ease 500ms;
     display: flex;
     justify-content: center;
@@ -45,13 +45,13 @@
 .ChevronUpIcon{
     width: 40px;
     height: auto;
-    color: white;
+    color: black;
     transition: all ease 500ms;
     margin-right: 20px;
 }
 
 .menuDiv > h1{
-    color: white;
+    color: black;
     font-size: 30px;
     font-weight: 300;
 }
