--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -14,14 +14,14 @@
 .line{
     width: 100%;
     height: 3px;
-    background-color: white;
+    background-color: black;
     transition: all ease 500ms;
 }
 
 .middleLine{
     width: 70%;
     height: 3px;
-    background-color: white;
+    background-color: black;
     transition: all ease 500ms;
 }
 
