--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
-    background-color: #FFBF00;
+    background-color: #000;
     transition: all ease 500ms;
     display: flex;
     justify-content: center;
@@ -45,13 +45,31 @@
 .ChevronUpIcon{
     width: 40px;
     height: auto;
-    color: black;
+    color: white;
     transition: all ease 500ms;
     margin-right: 20px;
 }
 
 .menuDiv > h1{
-    color: black;
+    color: white;
     font-size: 30px;
     font-weight: 300;
+}
+
+@media only screen and (max-width: 700px){
+    .menu{
+    width: 100vw;
+    height: calc(100vh - 40px);
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background-color: #000;
+    transition: all ease 500ms;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 4;
+}
+
 }
