--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -11,14 +11,28 @@
 }
 
 
-.line{
+.lineActive{
+    width: 100%;
+    height: 3px;
+    background-color: white;
+    transition: all ease 500ms;
+}
+
+.lineInactive{
     width: 100%;
     height: 3px;
     background-color: black;
     transition: all ease 500ms;
 }
 
-.middleLine{
+.middleLineActive{
+    width: 70%;
+    height: 3px;
+    background-color: white;
+    transition: all ease 500ms;
+}
+
+.middleLineInactive{
     width: 70%;
     height: 3px;
     background-color: black;
