--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -1,6 +1,6 @@
 .menu{
     width: 280px;
-    height: calc(100vh - 40px);
+    height: calc(100vh - 50px);
     position: fixed;
     bottom: 0;
     right: 0;
@@ -32,7 +32,7 @@
 .menuDiv{
     width: 100%;
     height: 50px;
-    /* border: 1px solid white; */
+    /* border: 1px solid black; */
     display: flex;
     justify-content: flex-start;
     align-items: center;
